<resources>

	<string name="app_name">Esperanza GamePad Driver</string>
	<string name="settings">App Settings</string>
	<string name="gamepadTest">GamePad Test</string>
	<string name="keyboardSettings">Keyboard Settings</string>
	<string name="keyboardSelector">Select Keyboard</string>
	<string name="accessibilitySettings">Accessibility Settings</string>
	<string name="usbActionSelect">Button Select</string>
	<string name="usbActionStart">Button Start</string>
	<string name="usbActionLtrigger">L Trigger</string>
	<string name="usbActionRtrigger">R Trigger</string>
	<string name="usbButtonYWithBack">Button Y/1: add BACK action</string>
	<string name="usbButtonBWithBack">Button B/2: add BACK action</string>
	<string name="usbButtonaAWithDpadCenter">Button A/3: add DPAD_CENTER action</string>
	<string name="usbButtonaXWithDpadCenter">Button X/4: add DPAD_CENTER action</string>
	<string name="thumbLSensitivity">L Thumb joystick sensitivity</string>
	<string name="thumbRSensitivity">R Thumb joystick sensitivity</string>

	<string-array name="usbPadButtonActions">
		<item>Default</item>
		<item>No action</item>
		<item>App settings</item>
		<item>Apps</item>
		<item>Back</item>
		<item>Home screen</item>
		<item>Recent apps</item>
		<item>Notifications</item>
		<item>Power dialog</item>
		<item>Sleep</item>
		<item>Screenshot</item>
	</string-array>
	<string-array name="usbPadButtonActionsValues">
		<item>default</item>
		<item>none</item>
		<item>settings</item>
		<item>apps</item>
		<item>1</item><!--AccessibilityService.GLOBAL_ACTION_BACK-->
		<item>2</item><!--AccessibilityService.GLOBAL_ACTION_HOME-->
		<item>3</item><!--AccessibilityService.GLOBAL_ACTION_RECENTS-->
		<item>4</item><!--itd.-->
		<item>6</item>
		<item>8</item>
		<item>9</item>
	</string-array>
	<string-array name="usbPadThumbSensitivities">
		<item>Very low</item>
		<item>Low</item>
		<item>Normal</item>
		<item>High</item>
		<item>Very high</item>
	</string-array>
	<string-array name="usbPadThumbSensitivitiesValues">
		<item>0.95</item>
		<item>0.75</item>
		<item>0.5</item>
		<item>0.25</item>
		<item>0.1</item>
	</string-array>
</resources>